[gd_scene load_steps=7 format=2]

[ext_resource path="res://Plants/Common/Plant.gd" type="Script" id=1]
[ext_resource path="res://Plants/Carrot/Sprites/Carrot3.png" type="Texture" id=2]
[ext_resource path="res://Plants/Carrot/Sprites/Carrot2.png" type="Texture" id=3]
[ext_resource path="res://Plants/Carrot/Sprites/Carrot1.png" type="Texture" id=4]
[ext_resource path="res://Plants/Common/Sprites/Seeds.png" type="Texture" id=5]

[sub_resource type="SpriteFrames" id=1]
resource_local_to_scene = true
animations = [ {
"frames": [ ExtResource( 5 ) ],
"loop": false,
"name": "seed",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": false,
"name": "phase2",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": false,
"name": "phase1",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": false,
"name": "phase3",
"speed": 5.0
} ]

[node name="Plant" type="Node2D"]
scale = Vector2( 0.3, 0.3 )
script = ExtResource( 1 )

[node name="Anim" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "phase2"

[node name="Timers" type="Node2D" parent="."]

[node name="Phase1Timer" type="Timer" parent="Timers"]
wait_time = 5.0
one_shot = true
autostart = true

[node name="Phase2Timer" type="Timer" parent="Timers"]
wait_time = 5.0
one_shot = true

[node name="Phase3Timer" type="Timer" parent="Timers"]
wait_time = 5.0
one_shot = true

[connection signal="timeout" from="Timers/Phase1Timer" to="." method="_on_Phase1Timer_timeout"]
[connection signal="timeout" from="Timers/Phase2Timer" to="." method="_on_Phase2Timer_timeout"]
[connection signal="timeout" from="Timers/Phase3Timer" to="." method="_on_Phase3Timer_timeout"]
